# cautatoru

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json  vcpkg.json
Source/: CMakeLists.txt  cautatoru.cpp  logging_manager.cpp  logging_manager.h
Source/Entity/: category.cpp  category.h  scrape_task.cpp  scrape_task.h  scraped_product.cpp  scraped_product.h
Source/Request/: request_manager.cpp  request_manager.h
Source/Scraper/: scraper.cpp  scraper.h
Source/Store/: store.cpp  store.h
